Changed how custom commands are contributed.  Now you just need to drop them into the ~/.s-ramp/commands folder, rather than editing a properties file.  In addition, this lets users drop dependency JARs in there as well.